Fix homepage stats on mobile, reverse rank graph

--- a/src/static/css/quaver.css
+++ b/src/static/css/quaver.css
@@ -123,7 +123,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .home-stats {
-    height: 160px;
+    min-height: 160px;
 }
 
 #home-mapsets .widget-header {
